--- a/charts/datakit/templates/service.yaml
+++ b/charts/datakit/templates/service.yaml
@@ -1,16 +1,16 @@
 
---- 
+---
 apiVersion: v1
 kind: Service
 metadata:
   name: {{ include "datakit.fullname" . }}
-  labels:
-    {{- include "datakit.labels" . | nindent 4 }}
 spec:
   type: {{ .Values.service.type }}
+  selector:
+    app: {{ include "datakit.fullname" . }}
   ports:
     - port: {{ .Values.service.port }}
-      targetPort: http
+      targetPort: {{ .Values.service.port }}
       protocol: TCP
       name: http
 
