--- a/charts/datakit/templates/daemonset.yaml
+++ b/charts/datakit/templates/daemonset.yaml
@@ -49,6 +49,8 @@ spec:
               value: {{ .Values.datakit.log_level }}
             - name: ENV_HTTP_LISTEN
               value: {{ .Values.datakit.http_listen }}
+            - name: ENV_K8S_CLUSTER_NAME
+              value: {{ .Values.datakit.cluster_name }}
             {{- if .Values.git_repos.enable }}
             {{- if not (eq  "-" .Values.git_repos.git_url) }}
             - name: DK_GIT_URL
@@ -84,6 +86,8 @@ spec:
           volumeMounts:
             - mountPath: /var/run
               name: run
+            - mountPath: /var/log
+              name: log
             - mountPath: /host/proc
               name: proc
               readOnly: true
@@ -123,18 +127,15 @@ spec:
       serviceAccount: {{ include "datakit.fullname" . }}
       serviceAccountName: {{ include "datakit.fullname" . }}
       volumes:
-        - configMap:
-            name: datakit-conf
-          name: datakit-conf
+{{/*        - configMap:*/}}
+{{/*            name: datakit-conf*/}}
+{{/*          name: datakit-conf*/}}
         - hostPath:
             path: /var/run
           name: run
         - hostPath:
-            path: /var/run/docker.sock
-          name: docker-socket
-        - hostPath:
-            path: /var/run/containerd/containerd.sock
-          name: containerd-socket
+            path: /var/log
+          name: log
         - hostPath:
             path: /proc
             type: ""
