支持 helm metrics-server

--- a/charts/datakit/requirements.yaml
+++ b/charts/datakit/requirements.yaml
@@ -2,3 +2,6 @@ dependencies:
 - condition: kubeStateMetricsEnabled
   name: kube-state-metrics
   repository: file://./charts/kube-state-metrics
+- condition: MetricsServerEnabled
+  name: metrics-server
+  repository: file://./charts/metrics-server
