--- a/charts/datakit/questions.yml
+++ b/charts/datakit/questions.yml
@@ -116,10 +116,18 @@ questions:
   show_if: "git_repos.enable=true"
 
 
-  #Kube State Metrics
+#Kube State Metrics
 - variable: kubeStateMetrics.enabled
   default: true
   description: "Create a kube-state-metrics deployment"
   type: boolean
   label: Deployment KubeState Metrics Deployment
   group: "Kube-State-Metrics"
+
+#Kube Metrics Server
+- variable: MetricsServerEnabled.enabled
+  default: true
+  description: "Create a metrics-server deployment"
+  type: boolean
+  label: Deployment KubeState Metrics Server Deployment
+  group: "metrics-server"
