--- a/charts/datakit/values.yaml
+++ b/charts/datakit/values.yaml
@@ -134,3 +134,8 @@ dkconfig: []
 ## If true, deploys the kube-state-metrics deployment.
 ## ref: https://github.com/kubernetes/charts/tree/master/stable/kube-state-metrics
 kubeStateMetricsEnabled: true
+
+
+## If true, deploys the metrics-server deployment.
+## ref: https://github.com/kubernetes-sigs/metrics-server/tree/master/charts/metrics-server
+MetricsServerEnabled: true
