update: add cmds `tool --prom-conf`, update internal/prom test cases

--- a/internal/prom/_test/prom.conf
+++ b/internal/prom/_test/prom.conf
@@ -1,14 +1,9 @@
-// Unless explicitly stated otherwise all files in this repository are licensed
-// under the MIT License.
-// This product includes software developed at Guance Cloud (https://www.guance.com/).
-// Copyright 2021-present Guance, Inc.
-
-package prom
-
-const sampleCfg = `
 [[inputs.prom]]
   # Exporter URLs
-  # urls = ["http://127.0.0.1:9100/metrics", "http://127.0.0.1:9200/metrics"]
+  urls = [
+		"istio.txt",
+		"istiod.txt"
+	]
 
   # 忽略对 url 的请求错误
   ignore_req_err = false
@@ -80,19 +75,19 @@ const sampleCfg = `
   # name = "mem"
 
   # 对于匹配如下 tag 相关的数据，丢弃这些数据不予采集
-  [inputs.prom.ignore_tag_kv_match]
-  # key1 = [ "val1.*", "val2.*"]
-  # key2 = [ "val1.*", "val2.*"]
+	[inputs.prom.ignore_tag_kv_match]
+		destination_service = [ ".*"]
+		#grpc_service = [".*"]
 
   # 重命名 prom 数据中的 tag key
-  [inputs.prom.tags_rename]
-    overwrite_exist_tags = false
-    [inputs.prom.tags_rename.mapping]
-    # tag1 = "new-name-1"
-    # tag2 = "new-name-2"
-    # tag3 = "new-name-3"
+	[inputs.prom.tags_rename]
+		overwrite_exist_tags = false
+		[inputs.prom.tags_rename.mapping]
+			# tag1 = "new-name-1"
+			# tag2 = "new-name-2"
+			# tag3 = "new-name-3"
 
   # 自定义Tags
   [inputs.prom.tags]
   # some_tag = "some_value"
-  # more_tag = "some_other_value"`
+  # more_tag = "some_other_value"
