#845 git_repos.repo 需要添加无密码模式

--- a/.gitignore
+++ b/.gitignore
@@ -76,3 +76,9 @@ test.go
 test.jso
 test.output
 y.output
+.pid
+cmd/datakit/conf.d/
+cmd/datakit/data/
+cmd/datakit/gitrepos/
+cmd/datakit/pipeline/
+cmd/datakit/python.d/
