添加k8s CRD datakit 应用

--- a/datakit.yaml.template
+++ b/datakit.yaml.template
@@ -52,6 +52,13 @@ rules:
   - list
   - watch
 - apiGroups:
+  - guance.com
+  resources:
+  - datakits
+  verbs:
+  - get
+  - list
+- apiGroups:
   - metrics.k8s.io
   resources:
   - pods
