datakit helm 添加 crd rbac 权限

--- a/charts/datakit/templates/rbac.yaml
+++ b/charts/datakit/templates/rbac.yaml
@@ -48,6 +48,13 @@ rules:
   - list
   - watch
 - apiGroups:
+  - guance.com
+  resources:
+  - datakits
+  verbs:
+  - get
+  - list
+- apiGroups:
   - metrics.k8s.io
   resources:
   - pods
