#896 支持通过数据特征将数据分流到不同的工作空间

--- a/install.sh.template
+++ b/install.sh.template
@@ -375,6 +375,11 @@ if [ -n "$DK_SINK_S" ]; then
   sink_security=$DK_SINK_S
 fi
 
+sink_profile=""
+if [ -n "$DK_SINK_P" ]; then
+  sink_profile=$DK_SINK_P
+fi
+
 ##################
 # Try install...
 ##################
@@ -441,6 +446,7 @@ else
 			--sink-tracing="${sink_tracing}"                 \
 			--sink-rum="${sink_rum}"                         \
 			--sink-security="${sink_security}"               \
+			--sink-profile="${sink_profile}"                 \
 			--ipdb-type="${ipdb_type}"                       \
 			--gin-log="${gin_log}" | $sudo_cmd tee ${install_log}
 fi
