--- a/install.sh.template
+++ b/install.sh.template
@@ -21,13 +21,13 @@ function updateHosts() {
 				while read -r line_number; do
 					# replace the text of each line with the desired host entry
 					if [[ "$OSTYPE" == "darwin"* ]]; then
-						sudo_cmd sed -i '' "${line_number}s/.*/${host_entry} /" /etc/hosts
+						$sudo_cmd sed -i '' "${line_number}s/.*/${host_entry} /" /etc/hosts
 					else
-						sudo_cmd sed -i "${line_number}s/.*/${host_entry} /" /etc/hosts
+						$sudo_cmd sed -i "${line_number}s/.*/${host_entry} /" /etc/hosts
 					fi
 				done <<< "$matches_in_hosts"
 			else
-				echo "$host_entry" | sudo_cmd tee -a /etc/hosts > /dev/null
+				echo "$host_entry" | $sudo_cmd tee -a /etc/hosts > /dev/null
 			fi
 		fi
 	done
@@ -114,6 +114,11 @@ fi
 
 # Select installer
 installer_base_url="https://{{.InstallBaseURL}}"
+
+if [ -n "$DK_INSTALLER_BASE_URL" ]; then
+	installer_base_url=$DK_INSTALLER_BASE_URL
+	printf "* base url = ${installer_base_url}\n"
+fi
 
 installer_file="installer-${os}-${arch}-{{.Version}}"
 
@@ -413,11 +418,12 @@ if [ "$upgrade" ]; then
 	# shellcheck disable=SC2059
 	printf "${BLU}\n* Upgrading DataKit...${CLR}\n"
 	$sudo_cmd $installer \
-		--upgrade --proxy="${proxy}" --enable-experimental=${enable_experimental} | $sudo_cmd tee ${install_log}
+		--upgrade --proxy="${proxy}" --installer_base_url="$installer_base_url" --enable-experimental=${enable_experimental} | $sudo_cmd tee ${install_log}
 else
 	printf "${BLU}\n* Installing DataKit...${CLR}\n"
 		$sudo_cmd $installer \
 		--install-only="$install_only" \
+		--installer_base_url="${installer_base_url}" \
 		--dataway="${dataway}" \
 		--global-host-tags="${global_host_tags}" \
 		--global-election-tags="${global_election_tags}" \
